--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -785,7 +785,7 @@ pre code {
 	min-width: 100%;
 	min-height: 100%;
 	z-index: 0;
-	background: url(../img/bg.png) center 0 no-repeat;
+	background: url(../img/bg.jpg) center 0 no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
 	text-shadow: - 0px 0px;
