--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -791,13 +791,34 @@ pre code {
 	text-shadow: - 0px 0px;
 }
 
+.container_bg2 {
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
+	z-index: 0;
+	background: url(../img/bg.jpg) center 0 no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	text-shadow: - 0px 0px;
+	margin-top: -250px;
+}
+
+.container_privacy {
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+	padding-top: 20em;
+	padding-bottom: 20em;
+	margin-top: -250px;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
-
 
 .container:before,
 .container:after {
@@ -1131,8 +1152,17 @@ pre code {
 }
 
 @media (min-width: 768px) {
+  .container_privacy {
+	width: 750px;
+	height: auto;
+  }
+  .container_bg {
+	width: 750px;
+	height: auto;
+  }
   .container {
-    width: 750px;
+	width: 750px;
+	height: auto;
   }
   .col-sm-1,
   .col-sm-2,
@@ -1303,6 +1333,12 @@ pre code {
 }
 
 @media (min-width: 992px) {
+  .container_privacy {
+    width: 970px;
+  }
+  .container_bg {
+    width: 970px;
+  }
   .container {
     width: 970px;
   }
@@ -1475,6 +1511,12 @@ pre code {
 }
 
 @media (min-width: 1200px) {
+  .container_bg {
+    width: 1170px;
+  }
+  .container_privacy {
+    width: 1170px;
+  }
   .container {
     width: 1170px;
   }
